<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:baselineAligned="false"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="7dp"
    tools:context=".QuestionsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/takeHelps"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mainbuttongreen"
            android:ems="2"
            android:text="@string/helpsSign"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/clock"
            style="@style/button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/mainbuttongreen"
            android:clickable="false"
            android:text="@string/laikas"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/questionOfQuestion"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mainbuttongreen"
            android:ems="2"
            android:text="@string/questionOfQuestion"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </LinearLayout>

    <karolis.vycius.kviz.widget.AutoFitTextView
        android:id="@+id/klausimas"
        style="@style/button_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.25"
        android:background="@drawable/mainbuttongreen"
        android:clickable="false"
        android:text="@string/kraunama" />

    <android.support.v7.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <karolis.vycius.kviz.widget.AutoFitButton
        android:id="@+id/answer1"
        style="@style/AnswersButtonStyle"
        android:clickable="false" />

    <android.support.v7.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005" />

    <karolis.vycius.kviz.widget.AutoFitButton
        android:id="@+id/answer2"
        style="@style/AnswersButtonStyle"
        android:clickable="false" />

    <android.support.v7.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005" />

    <karolis.vycius.kviz.widget.AutoFitButton
        android:id="@+id/answer3"
        style="@style/AnswersButtonStyle"
        android:clickable="false" />

    <android.support.v7.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.005" />

    <karolis.vycius.kviz.widget.AutoFitButton
        android:id="@+id/answer4"
        style="@style/AnswersButtonStyle"
        android:clickable="false" />

</LinearLayout>