<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityNavigationDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".MainActivity" >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:keepScreenOn="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <android.support.v7.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.84"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />

            <android.support.v7.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.02" />

            <karolis.vycius.kviz.widget.AutoFitButton
                android:id="@+id/play"
                style="@style/buttonMainMenuStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.14"
                android:text="@string/play" />

            <android.support.v7.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.02" />

            <karolis.vycius.kviz.widget.AutoFitButton
                android:id="@+id/rec"
                style="@style/buttonMainMenuStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.14"
                android:text="@string/Records" />

            <android.support.v7.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.02" />

            <karolis.vycius.kviz.widget.AutoFitButton
                android:id="@+id/about"
                style="@style/buttonMainMenuStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.14"
                android:text="@string/Rules" />

            <android.support.v7.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.02" />

            <karolis.vycius.kviz.widget.AutoFitTextView
                android:id="@+id/prefs"
                style="@style/buttonMainMenuStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.14"
                android:text="@string/MyKviz" />

            <android.support.v7.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.01" />
        </LinearLayout>

        <android.support.v7.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/mainActivitySidebarFrame"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>