<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/classic_white"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <TextView
        style="@style/classicHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/classic_header_background"
        android:text="@string/lastNonAnsweredQuestion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <karolis.vycius.kviz.widget.AutoFitButton
            android:id="@+id/gameFinishedLastQuestionText"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.25"
            android:background="@drawable/mainbuttongreen"
            android:clickable="false"
            android:text="@string/kraunama" />

        <android.support.v7.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01" />

        <karolis.vycius.kviz.widget.AutoFitButton
            android:id="@+id/answer1"
            style="@style/AnswersButtonStyle"
            android:background="@drawable/mainbuttonred"
            android:clickable="false" />

        <android.support.v7.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.005" />

        <karolis.vycius.kviz.widget.AutoFitButton
            android:id="@+id/answer2"
            style="@style/AnswersButtonStyle"
            android:background="@drawable/mainbuttonred"
            android:clickable="false" />

        <android.support.v7.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.005" />

        <karolis.vycius.kviz.widget.AutoFitButton
            android:id="@+id/answer3"
            style="@style/AnswersButtonStyle"
            android:background="@drawable/mainbuttonred"
            android:clickable="false" />

        <android.support.v7.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.005" />

        <karolis.vycius.kviz.widget.AutoFitButton
            android:id="@+id/answer4"
            style="@style/AnswersButtonStyle"
            android:background="@drawable/mainbuttonred"
            android:clickable="false" />

        <android.support.v7.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.005" />
    </LinearLayout>

    <TextView
        style="@style/classicHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/classic_header_background"
        android:text="@string/gameFinishedLastQuestionDesc" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" >

        <TextView
            android:id="@+id/gameFinishedLastQuestionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="3dp"
            android:singleLine="false"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </ScrollView>

</LinearLayout>